--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,20 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
-  .card {
-    @apply bg-white p-6 rounded-lg shadow-shallow;
-  }
-
-  .btn {
-    @apply bg-slate-800 px-2 py-1 text-center font-mono text-sm text-white rounded-md;
-  }
-
-  .input {
-    @apply border-b border-slate-800 font-mono text-gray-900 outline-none;
-  }
-}
-
 body {
-  @apply bg-secondary
+  @apply bg-slate-700
 }
